# FemtoBoltFwUpdater

./: CMakeLists.txt  README.md
Release/Linux/: FemtoBoltUpgrader  README.md  usbdownload
Release/Windows/: README.md
src/: main.cpp
